--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,8 @@ importFrom(furrr,furrr_options)
 importFrom(furrr,future_map_dfr)
 importFrom(future,multisession)
 importFrom(future,plan)
+importFrom(grDevices,palette)
+importFrom(grDevices,rainbow)
 importFrom(lubridate,"%within%")
 importFrom(magrittr,"%>%")
 importFrom(parallel,detectCores)
