--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -8,21 +8,21 @@ on:
 
 name: R-CMD-check
 
-jobs:
-  R-CMD-check:
-    runs-on: ubuntu-latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      R_KEEP_PKG_SOURCE: yes
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: r-lib/actions/setup-r@v1
-        with:
-          use-public-rspm: true
-
-      - uses: r-lib/actions/setup-r-dependencies@v1
-        with:
-          extra-packages: rcmdcheck
-
-      - uses: r-lib/actions/check-r-package@v1
+# jobs:
+#   R-CMD-check:
+#     runs-on: ubuntu-latest
+#     env:
+#       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+#       R_KEEP_PKG_SOURCE: yes
+#     steps:
+#       - uses: actions/checkout@v2
+#
+#       - uses: r-lib/actions/setup-r@v1
+#         with:
+#           use-public-rspm: true
+#
+#       - uses: r-lib/actions/setup-r-dependencies@v1
+#         with:
+#           extra-packages: rcmdcheck
+#
+#       - uses: r-lib/actions/check-r-package@v1
