more work on demographics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(create_data_table_variable_dictionary)
 export(create_list_of_code_column_names)
 export(create_medication_timeseries)
+export(gen_msoa_geo_data)
 export(get_codes)
 export(get_hospital_admissions)
 export(get_swd_date_range)
@@ -14,6 +15,7 @@ export(load_mortality_v2)
 export(load_swd_activity_v2)
 export(load_swd_attributes_v2)
 export(load_swd_measurements_v2)
+export(mode)
 export(plot_sankey_timeseries)
 export(process_overlaps_of_time_intervals)
 export(query_gp_medications)
