--- a/inst/database_connections/home/swd.yaml
+++ b/inst/database_connections/home/swd.yaml
@@ -1906,4 +1906,4 @@
     docs: derived measurement classification groupings
     source: measurement_group
     strategy: coalesce
-    use: no
+    use: yes
