--- a/inst/database_connections/work/apc_episodes.yaml
+++ b/inst/database_connections/work/apc_episodes.yaml
@@ -399,9 +399,10 @@
   - column: age_on_admission
     docs: AGE ON ADMISSION is derived as the number of completed years between the
       PERSON BIRTH DATE of the PATIENT and the START DATE (HOSPITAL PROVIDER SPELL).
-    use: no
+    use: yes
     source:
-    - AgeOnAdmission
+    - AIMTC_Age
+    #- AgeOnAdmission
     strategy: coalesce
   - column: ambulance_call_identifier
     docs: A unique identifier for each AMBULANCE CALL.
