--- a/inst/database_connections/home/mapping.yaml
+++ b/inst/database_connections/home/mapping.yaml
@@ -40,6 +40,7 @@
     - include: "/Users/nicholassunderland/git/acsprojectns/inst/database_connections/home/apc_spells_diagnosis.yaml"
     - include: "/Users/nicholassunderland/git/acsprojectns/inst/database_connections/home/apc_spells_primary_only_diagnosis.yaml"
     - include: "/Users/nicholassunderland/git/acsprojectns/inst/database_connections/home/apc_spells_procedures.yaml"
+  #  - include: "/Users/nicholassunderland/git/acsprojectns/inst/database_connections/home/apc_spells.yaml"
 
 - database: "mort"
   docs: "There are two main tables containing death information....."
